--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Githug Search App</a>
+    <a class="navbar-brand" href="#">Github Search App</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -15,7 +15,9 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" [routerLink]="['']"
+            >Home</a
+          >
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">SearchPage</a>
