--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -20,7 +20,7 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">SearchPage</a>
+          <a class="nav-link" [routerLink]="['search']">SearchPage</a>
         </li>
       </ul>
     </div>
