--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
   <app-header></app-header>
+  <app-search-page></app-search-page>
 </div>
 <router-outlet></router-outlet>
