--- a/src/app/components/user-details/user-details.component.html
+++ b/src/app/components/user-details/user-details.component.html
@@ -1,23 +1,33 @@
-/avatar_url, bio,company,followers,public_repos,url
+<!-- avatar_url, bio,company,followers,public_repos,url -->
 
-<div class="container">
+<div class="container d-flex">
   <div class="card" style="width: 18rem">
-    <img src="..." class="card-img-top" alt="..." />
+    <img src="{{ userDetail.avatar_url }}" class="card-img-top" alt="..." />
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">
-        Some quick example text to build on the card title and make up the bulk
-        of the card's content.
-      </p>
+      <h5 class="card-title">Username: {{ userDetail.login }}</h5>
+      <p class="card-text">Bio: {{ userDetail.bio }}</p>
     </div>
+    <div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+          Repositories: {{ userDetail.public_repos }}
+        </li>
+        <li class="list-group-item">Followers: {{ userDetail.followers }}</li>
+        <li class="list-group-item">Company: {{ userDetail.company }}</li>
+      </ul>
+    </div>
+    <div class="card-body">
+      <a href="#"><button>Github Profile</button></a>
+      <!-- <a href="#" class="card-link">Github link: {{ userDetail.url }} </a> -->
+    </div>
+  </div>
+  <div>
     <ul class="list-group list-group-flush">
-      <li class="list-group-item">An item</li>
-      <li class="list-group-item">A second item</li>
-      <li class="list-group-item">A third item</li>
+      <li class="list-group-item">
+        Repositories: {{ userDetail.public_repos }}
+      </li>
+      <li class="list-group-item">Followers: {{ userDetail.followers }}</li>
+      <li class="list-group-item">Company: {{ userDetail.company }}</li>
     </ul>
-    <div class="card-body">
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
-    </div>
   </div>
 </div>
