--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,9 @@
 <div class="container-fluid">
-  <div class="cont2 m-2">
+  <div class="cont2 m-3">
     <img class="img1" src="../../../assets/Images/github.gif" />
     <p>Search all your Github profiles <br />with one click!</p>
-    <a href="#"><p>go to search page</p></a>
+    <a routerLink="search" routerLinkActive="active"
+      ><p>go to search page</p></a
+    >
   </div>
 </div>
