st-styling modifications on anchor tag in home component

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -19,7 +19,8 @@
 .cont2 a {
   text-align: center;
   font-size: small;
-  margin-top: 40px;
+  color: purple;
+  text-decoration: none;
 }
 
 .img1 {
