--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,9 @@
-<div class="container-fluid">
+<div class="container m-3">
   <div class="cont2 m-3">
     <img class="img1" src="../../../assets/Images/github.gif" />
     <p>Search all your Github profiles <br />with one click!</p>
     <a routerLink="search" routerLinkActive="active"
-      ><p>go to search page</p></a
+      ><p class="m-3">Go to search page</p></a
     >
   </div>
 </div>
