--- a/src/app/components/user-details/user-details.component.html
+++ b/src/app/components/user-details/user-details.component.html
@@ -17,8 +17,8 @@
       </ul>
     </div>
     <div class="card-body">
-      <a [href]="userDetail.html_url" target="_blank" class="btn"
-        ><button>Github Profile</button></a
+      <a [href]="userDetail.html_url" target="_blank" class="btn btn-success"
+        >Github Profile</a
       >
       <!-- <a href="#" class="card-link">Github link: {{ userDetail.url }} </a> -->
     </div>
