st-styling modifications for project UI and its components

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container m-3">
+<div class="container m-3 random1">
   <div class="cont2 m-3">
     <img class="img1" src="../../../assets/Images/github.gif" />
     <p>Search all your Github profiles <br />with one click!</p>
