st-styling modifications home page UI

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,15 @@
-<div class="container m-3 random1">
-  <div class="cont2 m-3">
-    <img class="img1" src="../../../assets/Images/github.gif" />
+<div class="container-fluid random1">
+  <div class="cont1">
+    <div class="cont2 m-3">
+      <img class="img1" src="../../../assets/Images/github.gif" />
+    </div>
+    <h3>Welcome to Github Search App</h3>
     <p>Search all your Github profiles <br />with one click!</p>
-    <a routerLink="search" routerLinkActive="active"
-      ><p class="m-3">Go to search page</p></a
+    <a
+      routerLink="search"
+      routerLinkActive="active"
+      class="btn btn-outline-secondary bb m-3 p-2"
+      >Go to search page</a
     >
   </div>
 </div>
