--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -4,23 +4,37 @@
   box-sizing: border-box;
 }
 
+.cont1 {
+  width: 40%;
+  height: auto;
+  position: relative;
+  left: 30%;
+}
+
 .cont2 {
   width: 250px;
   height: 250px;
   position: relative;
-  left: 40%;
+  left: 25%;
 }
 
-.cont2 p {
+.cont1 h3 {
+  text-align: center;
+  color: purple;
+  margin: 20px;
+}
+
+.cont1 p {
   font-weight: bolder;
   text-align: center;
 }
 
-.cont2 a {
-  text-align: center;
+.cont1 .bb {
   font-size: small;
   color: purple;
   text-decoration: none;
+  position: relative;
+  left: 35%;
 }
 
 .img1 {
@@ -29,5 +43,8 @@
 }
 
 .random1 {
-  background-color: aqua;
+  width: 100%;
+  height: 100%;
+
+  height: 80vh;
 }
